deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ok-app
    labels:
      app: ok-app
spec:
    replicas: 2
    selector:
       matchLabels:
          app: ok-app
    template:
       metadata:
          labels:
             app: ok-app
       spec:
          containers:
          - name: service-ok
            image: krasnovatiy/service-ok:1.0
            ports:
              - name: web 
                containerPort: 8000
